tools/tests/errors/pow_zero_mod.ki
discard pow(2, 3, 0)
